--- a/src/app/demo/components/auth/register/register.component.html
+++ b/src/app/demo/components/auth/register/register.component.html
@@ -1,6 +1,5 @@
 <div class="surface-ground flex align-items-center justify-content-center min-h-screen min-w-screen overflow-hidden">
-    <p-toast></p-toast>
-
+    <p-toast key="tst"></p-toast>
     <div class="flex flex-column align-items-center justify-content-center">
         <img src="assets/layout/images/{{layoutService.config.colorScheme === 'light' ? 'logo-dark' : 'logo-white'}}.svg"
             alt="Sakai logo" class="mb-5 w-6rem flex-shrink-0">
@@ -9,26 +8,28 @@
             <div class="w-full surface-card py-8 px-5 sm:px-8" style="border-radius:53px">
                 <div class="text-center mb-5">
                     <img src="assets/demo/images/login/avatar.png" alt="Image" height="50" class="mb-3">
-                    <div class="text-900 text-3xl font-medium mb-3">{{ 'pages.register.title' | translate}}</div>
-                    <span class="text-600 font-medium">{{ 'pages.register.subtitle' | translate}}</span>
+                    <div class="text-900 text-3xl font-medium mb-3">{{ edit ? 'pages.edit.title' : 'pages.register.title' | translate}}</div>
+                    <span class="text-600 font-medium">{{  edit ? 'pages.edit.subtitle' : 'pages.register.subtitle' | translate}}</span>
                 </div>
 
                 <div>
-                    <label for="company" class="block text-900 text-xl font-medium mb-2">{{ 'pages.register.username' | translate}}</label>
+                    <label for="username" class="block text-900 text-xl font-medium mb-2">{{ 'pages.register.username' | translate}}</label>
                     <input [formControl]="form.get('username')" type="text" placeholder="Good wine" pInputText
                         class="w-full md:w-30rem mb-5" style="padding:1rem">
-                    <label for="company" class="block text-900 text-xl font-medium mb-2">{{ 'pages.register.password' | translate}}</label>
+
+                    <label for="password" class="block text-900 text-xl font-medium mb-2">{{ 'pages.register.password' | translate}}</label>
                     <input [formControl]="form.get('password')" type="text" placeholder="******" pInputText
                         class="w-full md:w-30rem mb-5" style="padding:1rem">
-                    <label for="company" class="block text-900 text-xl font-medium mb-2">{{ 'pages.register.company' | translate}}</label>
-                    <input [formControl]="form.get('company')" type="text" placeholder="Good wine srl" pInputText
+
+                    <label for="company_name" class="block text-900 text-xl font-medium mb-2">{{ 'pages.register.company' | translate}}</label>
+                    <input [formControl]="form.get('company_name')" type="text" placeholder="Good wine srl" pInputText
                         class="w-full md:w-30rem mb-5" style="padding:1rem">
 
                     <label for="address" class="block text-900 font-medium text-xl mb-2">{{ 'pages.register.address' | translate}}</label>
                     <input [formControl]="form.get('address')" type="text" placeholder="Street main 1" pInputText
                         class="w-full md:w-30rem mb-5" style="padding:1rem">
 
-                    <label for="address" class="block text-900 font-medium text-xl mb-2">{{ 'pages.register.cap' | translate}}</label>
+                    <label for="cap" class="block text-900 font-medium text-xl mb-2">{{ 'pages.register.cap' | translate}}</label>
                     <input [formControl]="form.get('cap')" type="text" placeholder="00000" pInputText
                         class="w-full md:w-30rem mb-5" style="padding:1rem">
 
@@ -36,15 +37,15 @@
                     <input [formControl]="form.get('location')" type="text" placeholder="Siena" pInputText
                         class="w-full md:w-30rem mb-5" style="padding:1rem">
 
-                    <label for="location" class="block text-900 font-medium text-xl mb-2">{{ 'pages.register.pr' | translate}}</label>
+                    <label for="pr" class="block text-900 font-medium text-xl mb-2">{{ 'pages.register.pr' | translate}}</label>
                     <input [formControl]="form.get('pr')" type="text" placeholder="SI" pInputText
                         class="w-full md:w-30rem mb-5" style="padding:1rem">
 
-                    <label for="location" class="block text-900 font-medium text-xl mb-2">{{ 'pages.register.state' | translate}}</label>
+                    <label for="state" class="block text-900 font-medium text-xl mb-2">{{ 'pages.register.state' | translate}}</label>
                     <input [formControl]="form.get('state')" type="text" placeholder="Italy" pInputText
                         class="w-full md:w-30rem mb-5" style="padding:1rem">
 
-                    <label for="location" class="block text-900 font-medium text-xl mb-2">{{ 'pages.register.phone' | translate}}</label>
+                    <label for="phone" class="block text-900 font-medium text-xl mb-2">{{ 'pages.register.phone' | translate}}</label>
                     <input [formControl]="form.get('phone')" type="text" placeholder="+39000000000" pInputText
                         class="w-full md:w-30rem mb-5" style="padding:1rem">
 
@@ -52,25 +53,28 @@
                     <input [formControl]="form.get('email')" type="text" placeholder="goodwine@gmail.com" pInputText
                         class="w-full md:w-30rem mb-5" style="padding:1rem">
 
-                    <label for="location" class="block text-900 font-medium text-xl mb-2">{{ 'pages.register.website' | translate}}</label>
+                    <label for="website" class="block text-900 font-medium text-xl mb-2">{{ 'pages.register.website' | translate}}</label>
                     <input [formControl]="form.get('website')" type="text" placeholder="www.goodwine.it" pInputText
                         class="w-full md:w-30rem mb-5" style="padding:1rem">
 
-                    <label for="location" class="block text-900 font-medium text-xl mb-2">{{ 'pages.register.piva' | translate}}</label>
+                    <label for="piva" class="block text-900 font-medium text-xl mb-2">{{ 'pages.register.piva' | translate}}</label>
                     <input [formControl]="form.get('piva')" type="text" placeholder="11359591002" pInputText
                         class="w-full md:w-30rem mb-5" style="padding:1rem">
 
-                    <label for="location" class="block text-900 font-medium text-xl mb-2">{{ 'pages.register.sdi' | translate}}</label>
+                    <label for="sdi" class="block text-900 font-medium text-xl mb-2">{{ 'pages.register.sdi' | translate}}</label>
                     <input [formControl]="form.get('sdi')" type="text" placeholder="0000000" pInputText
                         class="w-full md:w-30rem mb-5" style="padding:1rem">
 
-                    <div class="flex align-items-center justify-content-between mb-5 gap-5">
+                    <div class="flex flex-column mb-5 gap-5" *ngIf="edit">
                         <div class="flex align-items-center">
-
+                            <img *ngIf="user.image" src="//{{user.image}}" style="max-height:150px;">
+                            <p-fileUpload mode="basic" name="image" chooseIcon="pi pi-upload"
+                                url="https://app.eulabel.it/backend/profile/{{user.id}}" accept="image/*"
+                                maxFileSize="1000000" [auto]="true" (onUpload)="onBasicUpload()" chooseLabel="Browse" />
                         </div>
-
                     </div>
-                    <button pButton pRipple label="{{ 'pages.register.submit' | translate}}" (click)="register()" class="w-full p-3 text-xl"></button>
+                    
+                    <button pButton pRipple label="{{ 'pages.register.submit' | translate}}" (click)="save()" class="w-full p-3 text-xl"></button>
                 </div>
             </div>
         </div>
