--- a/src/app/demo/components/dashboard/dashboard.component.html
+++ b/src/app/demo/components/dashboard/dashboard.component.html
@@ -54,22 +54,15 @@
                         <div class="col-12 flex justify-content-center align-items-center">
                             <img *ngIf="user.image" src="//{{user.image}}" style="max-height:150px;">
                         </div>
-                        <p-divider></p-divider>
-                        <div class="col-12 mt-3 flex justify-content-center align-items-center"
-                            style="background-color: rgb(189, 185, 82);"><img src="assets/icon/color.svg"
-                                style="width:20px;"></div>
                     </div>
                 </div>
                 <!--DATI-->
-                <div class="col-12 md:col-7 flex justify-content-center align-items-center text-center">
+                <div class="col-12 md:col-7 flex flex-column text-center">
                     <span>
                         <h4>{{ companyName.value }}</h4>
                     </span>
-                        <input type="text" pInputText [formControl]="companyName" required autofocus />
                 </div>
-
             </div>
-
         </div>
     </div>
 
