--- a/src/app/demo/components/preview/preview.component.html
+++ b/src/app/demo/components/preview/preview.component.html
@@ -23,15 +23,15 @@
                 <div class="grid p-2">
                     <div class="col-12">
                         <div *ngIf="form.get('product_name').value">
-                            <span class="titolo">{{form.get('product_name').value}}</span>
+                            <span class="head_title">{{form.get('product_name').value}}</span>
                         </div>
                     </div>
                     <!--IMMAGINE PRODOTTO -->
-                    <div class="col-12" style="margin-bottom:-25px;z-index: 9999;">
+                    <div class="col-12" style="margin-bottom:-25px;z-index: 1;" *ngIf="sub_image">
                         <div class="grid">
                             <div class="col"></div>
                             <div class="col-5 text-center" style="background-color: white">
-                                <img src="assets/product_image.svg" class="image-fluid">
+                                <img src="https://{{sub_image}}" class="image-fluid">
                             </div>
                             <div class="col"></div>
                         </div>
@@ -42,6 +42,7 @@
                         <div class="grid">
 
                             <div class="col-12  align-items-center justify-content-between text-center text-white">
+                                <p class="mb-0">Manca il nome dell'azienda o del brand</p>
                                 <b>{{form.get('product_name').value}}</b>
                             </div>
                             <div class="col"></div>
@@ -63,24 +64,228 @@
                         </div>
 
                     </div>
-                    <!--INGREDIENTI-->
-                    <div class="col-12 text-center">
+                </div>
+
+                <!--INGREDIENTI-->
+                <div class="grid p-2">
+                    <div class="col-12 text-center py-0 my-0">
                         <div class="grid">
                             <div class="col-12">
                                 <span class="titolo" style="color: rgb(189, 185, 82);">{{ 'pages.ingredients.title' |
                                     translate }}</span><br>
-                                    <span  class="info" *ngIf="form.get('ingredients').value">
-                                        {{form.get('ingredients').value}}
-                                    </span><br>
-                                    <span  class="info" *ngIf="form.get('packages').value">
-                                        <i>{{form.get('packages').value}}</i>
-                                    </span>
-                           </div>
-                            
+                                <p class="mb-0 info">Manca la lista degli ingrdienti inseriti</p>
+                                <span class="info" *ngIf="form.get('ingredients').value">
+                                    {{form.get('ingredients').value}}
+                                </span><br>
+                                <p class="mb-0 info">Fa vedere il numero e non il testo</p>
+                                <span class="info" *ngIf="form.get('packages').value">
+                                    <i>{{form.get('packages').value}}</i>
+                                </span>
+                            </div>
+
                         </div>
                     </div>
+                </div>
+                <p-divider></p-divider>
+
+                <!--TABELLA NUTRIZIONALE-->
+                <div class="grid p-2">
+                    <div class="col-12">
+                        <div class="grid text-center">
+                            <div class="col-12"><span class="titolo" style="color: rgb(189, 185, 82);">{{
+                                    'pages.nutritions.title' | translate }}</span></div>
+                        </div>
+                        <div class="p-1" style="background-color: rgb(189, 185, 82 , 0.1);">
+                            <table style="width: 100%;" border="1" class="info">
+                                <tbody>
+                                    <tr
+                                        style="border-bottom:1px;border-color:  rgb(189, 185, 82);border-style: dotted;">
+                                        <td>Valori medi</td>
+                                        <td class="text-right">per 100ml</td>
+                                        <td *ngIf="show_portion" class="text-right">per porzione <span
+                                                style="font-size:0.6rem">(500ml)</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td><b>{{ 'pages.nutritions.energy_kj' | translate }}</b></td>
+                                        <td class="text-right">{{form.get('energy_kj').value}}</td>
+                                        <td *ngIf="show_portion" class="text-right">25</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="pl-2">{{ 'pages.nutritions.energy_kcal' | translate }}</td>
+                                        <td class="text-right">{{form.get('energy_kcal').value}}</td>
+                                        <td *ngIf="show_portion" class="text-right">25</td>
+                                    </tr>
+                                    <tr>
+                                        <td><b>{{ 'pages.nutritions.fat' | translate }}</b></td>
+                                        <td class="text-right">{{form.get('fat').value}}</td>
+                                        <td *ngIf="show_portion" class="text-right">25</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="pl-2">{{ 'pages.nutritions.fat_sat' | translate }}</td>
+                                        <td class="text-right">{{form.get('fat_sat').value}}</td>
+                                        <td *ngIf="show_portion" class="text-right">25</td>
+                                    </tr>
+                                    <tr>
+                                        <td><b>{{ 'pages.nutritions.carb' | translate }}</b></td>
+                                        <td class="text-right">{{form.get('carb').value}}</td>
+                                        <td *ngIf="show_portion" class="text-right">25</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="pl-2">{{ 'pages.nutritions.carb_sugar' | translate }}</td>
+                                        <td class="text-right">{{form.get('carb_sugar').value}}</td>
+                                        <td *ngIf="show_portion" class="text-right">25</td>
+                                    </tr>
+                                    <tr>
+                                        <td><b>{{ 'pages.nutritions.protein' | translate }}</b></td>
+                                        <td class="text-right">{{form.get('protein').value}}</td>
+                                        <td *ngIf="show_portion" class="text-right">25</td>
+                                    </tr>
+                                    <tr>
+                                        <td><b>{{ 'pages.nutritions.salt' | translate }}</b></td>
+                                        <td class="text-right">{{form.get('salt').value}}</td>
+                                        <td *ngIf="show_portion" class="text-right">25</td>
+                                    </tr>
 
 
+                                </tbody>
+                            </table>
+                        </div>
+                        <!-- DivTable.com -->
+                        <div class="mt-3 mx-1 text-sm">Contiene quantità trascurabili di Sale, Acidi grassi saturi,
+                            Proteine, Grassi.
+                        </div>
+                    </div>
+                </div>
+                <p-divider></p-divider>
+                <!--RICICLO-->
+                <div class="grid p-2">
+                    <div class="col-12 text-center py-0 my-0">
+                        <div class="grid">
+                            <div class="col-12">
+                                <span class="titolo" style="color: rgb(189, 185, 82);">{{
+                                    'pages.recycling.title_preview' |
+                                    translate }}</span><br>
+                                <span class="info"><i>{{ 'pages.recycling.description_preview' | translate }}</i></span>
+                                <span class="info" *ngIf="form.get('ingredients').value">
+                                    {{form.get('ingredients').value}}
+                                </span><br>
+                                <span class="info" *ngIf="form.get('packages').value">
+                                    <i>{{form.get('packages').value}}</i>
+                                </span>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <p-divider></p-divider>
+                <!--CONSUMO RESPONSABILE-->
+                <div class="grid p-2">
+                    <div class="col-12 text-center py-0 my-0">
+                        <div class="grid">
+                            <div class="col-12 mb-0">
+                                <span class="titolo" style="color: rgb(189, 185, 82);">{{
+                                    'pages.recycling.sub.title' |
+                                    translate }}</span>
+                            </div>
+                            <div class="col-12 mt-0 pt-0">
+                                <div class="flex justify-content-center flex-wrap">
+                                    <div *ngIf="form.get('drive').value" class="flex align-items-center justify-content-center w-4rem h-4rem  m-2"><img  src="https://firebasestorage.googleapis.com/v0/b/label-scan-1c165.appspot.com/o/public%2FresponsibleConsumption%2Fdriving.svg?alt=media&amp;token=9190dac0-4b69-4535-bb4e-c893665a8467"
+                                        alt="Don't Drink and Drive"></div>
+                                    
+                                    <div *ngIf="form.get('pregnant').value" class="flex align-items-center justify-content-center w-4rem h-4rem  m-2"><img src="https://firebasestorage.googleapis.com/v0/b/label-scan-1c165.appspot.com/o/public%2FresponsibleConsumption%2Fpregnant.svg?alt=media&amp;token=bae940be-54fd-4437-93f4-4ed6e8fc0644"
+                                        alt="Pregnancy"></div>
+                                        <div *ngIf="form.get('age').value" class="flex align-items-center justify-content-center w-4rem h-4rem  m-2"><img  src="https://firebasestorage.googleapis.com/v0/b/label-scan-1c165.appspot.com/o/public%2FresponsibleConsumption%2Funderage.svg?alt=media&amp;token=ff71068d-93fc-42ec-9fd5-0c0a5cb799d0"
+                                            alt="Underaged Consumption"></div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <p-divider></p-divider>
+                <!--INFO PRODOTTO-->
+                <div class="grid p-2">
+                    <div class="col-12 text-center py-0 my-0">
+                        <div class="grid">
+                            <div class="col-12 mb-0">
+                                <span class="titolo" style="color: rgb(189, 185, 82);">{{
+                                    'pages.info_prodotto.title' |
+                                    translate }}</span>
+                            </div>
+                            <div class="col-12 mt-0 pt-0">
+                                <div class="grid">
+                                    <div class="col-6 text-center info">
+                                        Origine<br>
+                                        <b>Italia</b>
+                                    </div>
+                                    <div class="col-6 text-center info" *ngIf="form.get('type').value">
+                                        {{ 'pages.elabel.form.type.label' | translate }}<br>
+                                        <b>{{form.get('type').value}}</b>
+                                    </div>
+                                    <div class="col-6 text-center info" *ngIf="form.get('geographical_indication').value">
+                                        {{ 'pages.elabel.form.geographical_indication.label' | translate }}<br>
+                                        <b>{{form.get('geographical_indication').value}}</b>
+                                    </div>
+                                    <div class="col-6 text-center info" *ngIf="form.get('vintage_year').value">
+                                        {{ 'pages.elabel.form.vintage_year.label' | translate }}<br>
+                                        <b>{{form.get('vintage_year').value | date : 'Y'}}</b>
+                                    </div>
+                                    <div class="col-12 text-center info" *ngIf="form.get('product_varieties').value">
+                                        {{ 'pages.elabel.form.product_varieties.label' | translate }}<br>
+                                        <i>{{form.get('product_varieties').value}}</i>
+                                    </div>
+                                    
+                                    <div class="col-12 text-center info" *ngIf="form.get('description').value">
+                                        <i>{{form.get('description').value}}</i>
+                                    </div>
+
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                 <!--INFO PRODUTTORE-->
+                 <div class="grid p-2">
+                    <div class="col-12 text-center py-0 my-0">
+                        <div class="grid">
+                            <div class="col-12 mb-0">
+                                <span class="titolo" style="color: rgb(189, 185, 82);">{{
+                                    'pages.info_prodotto.title' |
+                                    translate }}</span>
+                            </div>
+                            <div class="col-12 mt-0 pt-0">
+                                <div class="grid">
+                                    <div class="col-6 text-center info">
+                                        Origine<br>
+                                        <b>Italia</b>
+                                    </div>
+                                    <div class="col-6 text-center info" *ngIf="form.get('type').value">
+                                        {{ 'pages.elabel.form.type.label' | translate }}<br>
+                                        <b>{{form.get('type').value}}</b>
+                                    </div>
+                                    <div class="col-6 text-center info" *ngIf="form.get('geographical_indication').value">
+                                        {{ 'pages.elabel.form.geographical_indication.label' | translate }}<br>
+                                        <b>{{form.get('geographical_indication').value}}</b>
+                                    </div>
+                                    <div class="col-6 text-center info" *ngIf="form.get('vintage_year').value">
+                                        {{ 'pages.elabel.form.vintage_year.label' | translate }}<br>
+                                        <b>{{form.get('vintage_year').value | date : 'Y'}}</b>
+                                    </div>
+                                    <div class="col-12 text-center info" *ngIf="form.get('product_varieties').value">
+                                        {{ 'pages.elabel.form.product_varieties.label' | translate }}<br>
+                                        <i>{{form.get('product_varieties').value}}</i>
+                                    </div>
+                                    
+                                    <div class="col-12 text-center info" *ngIf="form.get('description').value">
+                                        <i>{{form.get('description').value}}</i>
+                                    </div>
+
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -106,7 +311,7 @@
     </div>
 </section>
 
-<div class="flex flex-column gap-2 p-4">
+<!-- <div class="flex flex-column gap-2 p-4">
     <div class="flex border-1 flex-column">
         <div class="flex flex-column gap-2" *ngIf="form.get('product_name').value">
             <div><b>{{ 'pages.elabel.form.product_name.label' | translate }}</b></div>
@@ -154,39 +359,7 @@
             <div>{{form.get('packages').value}}</div>
         </div>
 
-        <h2>{{ 'pages.nutritions.title' | translate }}</h2>
-        <div class="flex gap-2" *ngIf="form.get('energy_kj').value">
-            <div><b>{{ 'pages.nutritions.energy_kj' | translate }}</b></div>
-            <div>{{form.get('energy_kj').value}}</div>
-        </div>
-        <div class="flex gap-2" *ngIf="form.get('energy_kcal').value">
-            <div><b>{{ 'pages.nutritions.energy_kcal' | translate }}</b></div>
-            <div>{{form.get('energy_kcal').value}}</div>
-        </div>
-        <div class="flex gap-2" *ngIf="form.get('fat').value">
-            <div><b>{{ 'pages.nutritions.fat' | translate }}</b></div>
-            <div>{{form.get('fat').value}}</div>
-        </div>
-        <div class="flex gap-2" *ngIf="form.get('fat_sat').value">
-            <div><b>{{ 'pages.nutritions.fat_sat' | translate }}</b></div>
-            <div>{{form.get('fat_sat').value}}</div>
-        </div>
-        <div class="flex gap-2" *ngIf="form.get('carb').value">
-            <div><b>{{ 'pages.nutritions.carb' | translate }}</b></div>
-            <div>{{form.get('carb').value}}</div>
-        </div>
-        <div class="flex gap-2" *ngIf="form.get('carb_sugar').value">
-            <div><b>{{ 'pages.nutritions.carb_sugar' | translate }}</b></div>
-            <div>{{form.get('carb_sugar').value}}</div>
-        </div>
-        <div class="flex gap-2" *ngIf="form.get('protein').value">
-            <div><b>{{ 'pages.nutritions.protein' | translate }}</b></div>
-            <div>{{form.get('protein').value}}</div>
-        </div>
-        <div class="flex gap-2" *ngIf="form.get('salt').value">
-            <div><b>{{ 'pages.nutritions.salt' | translate }}</b></div>
-            <div>{{form.get('salt').value}}</div>
-        </div>
+
 
         <h2>{{ 'pages.recycling.title' | translate }}</h2>
 
@@ -213,4 +386,4 @@
         </div>
 
     </div>
-</div>
+</div> -->
