--- a/src/app/demo/components/elabel/elabel.component.html
+++ b/src/app/demo/components/elabel/elabel.component.html
@@ -563,6 +563,14 @@
 
 
     <div class="col-12 md:col-3" >
-        <app-preview [ingredients]="ingredients" [types]="types" [preview_image]="preview_image" [sub_image]="sub_image" [form]="form"></app-preview>
+        <app-preview 
+        [materials]="materials" 
+        [containers]="containers" 
+        [packages]="packages" 
+        [ingredients]="ingredients" 
+        [types]="types" 
+        [preview_image]="preview_image" 
+        [sub_image]="sub_image" 
+        [form]="form"></app-preview>
     </div>
 </div>
