--- a/src/app/demo/components/preview/preview.component.scss
+++ b/src/app/demo/components/preview/preview.component.scss
@@ -335,12 +335,18 @@ overflow-x: hidden;
 .titolo{
   font-size:1rem;
   font-weight: bold;
+  line-height: 1.2rem;
 }
 .info{
   font-size:0.8rem;
+  line-height: 1rem;
 
 }
 .head_title{
   font-size:0.7rem;
   font-weight: bold;
+}
+td{
+  padding-top:5px;
+  padding-bottom:5px;
 }
